# GeoMath

./: .gitignore  .gitmodules  CHANGELOGS  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  premake5.lua
.codelite/: MathProject.tags  refactoring.db
src/: application.cpp  application.h  button.cpp  button.h  data.cpp  data.h  graph.cpp  graph.h  helpers.cpp  helpers.h  main.cpp  menu.cpp  menu.h  points.cpp  points.h  popup.cpp  popup.h  startup.cpp  startup.h  user.cpp  user.h  vec2.h
